--- a/style.css
+++ b/style.css
@@ -127,3 +127,18 @@ button:hover {
     border-color: #ffbdbd;
     color: #dc3545;
 }
+
+.progress-bar {
+    height: 10px;
+    background-color: #f8f0e5;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 20px;
+}
+
+.progress {
+  height: 100%;
+  background-color: #e86a33;
+  width: 0%;
+  transition: width 0.3s ease;
+}
