--- a/style.css
+++ b/style.css
@@ -169,3 +169,29 @@ button:hover {
     color: #e86a33;
     font-weight: 600;
 }
+
+
+/* MEDIA QUERIES */
+
+@media (max-width: 500px) {
+    .screen {
+        padding: 1rem; 
+    }
+
+    .start-screen h1 {
+        font-size: 2rem;
+    }
+
+    #question-text {
+        font-size: 1.3rem;
+    }
+
+    .answer-btn {
+        padding: 12px;
+    }
+
+    button {
+        padding: 12px 25px;
+        font-size: 1rem;
+    }
+}
